# hands-on-data-analysis-with-pandas-2nd-edition-pt-br

./: README.md  pyproject.toml  requirements.txt
appendix/: README.md
ch_01/: 1-checking_your_setup.ipynb  python_101.ipynb
ch_02/: 1-pandas_data_structures.ipynb  2-creating_dataframes.ipynb  3-making_dataframes_from_api_requests.ipynb  4-inspecting_dataframes.ipynb  5-subsetting_data.ipynb  6-adding_and_removing_data.ipynb
ch_02/data/: quakes.db
ch_03/: 1-wide_vs_long.ipynb  2-using_the_weather_api.ipynb  3-cleaning_data.ipynb  4-reshaping_data.ipynb  5-handling_data_issues.ipynb
ch_04/: 1-querying_and_merging.ipynb  2-dataframe_operations.ipynb  3-aggregations.ipynb  understanding_window_calculations.ipynb
ch_05/: 1-introducing_matplotlib.ipynb  2-plotting_with_pandas.ipynb  3-pandas_plotting_module.ipynb
ch_06/: 1-introduction_to_seaborn.ipynb  2-formatting_plots.ipynb  3-customizing_visualizations.ipynb
pratica/: pratica.ipynb
src/: check_environment.py
summary/: 00.ipynb
